--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <body>
 
 <h1>DeltaCo</h1>
-<p>Matthew Haddad
-Ethan Dalool
-Micah Monticello
-Ian Atol</p>
+
+<p>Matthew Haddad</p>
+
+<p>Ethan Dalool</p>
+
+<p>Micah Monticello</p>
+
+<p>Ian Atol</p>
+
 
 </body>
 </html>
