added line break

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 
 <h1>DeltaCo</h1>
 
-<p>Matthew Haddad</p>
-
-<p>Ethan Dalool</p>
-
-<p>Micah Monticello</p>
-
-<p>Ian Atol</p>
+<p>Matthew Haddad<br>
+Ethan Dalool<br>
+Micah Monticello<br>
+Ian Atol<br></p>
 
 
 </body>
