Add Vanessa's name to the page.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 
 <h1>DeltaCo</h1>
 
-<p>Matthew Haddad<br>
-Ethan Dalool<br>
-Micah Monticello<br>
-Ian Atol<br></p>
-
+<ul>
+<li>CEO: Matthew Haddad</li>
+<li>Ethan Dalool</li>
+<li>Micah Monticello</li>
+<li>Ian Atol</li>
+<li>Vanessa Martinez</li>
+</ul>
 
 </body>
 </html>
