--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html>
 <body>
 
-<h1>DeltaCo</h1>
+<code>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Λ<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/ \<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//\ \<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//&nbsp;&nbsp;\ \<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//&nbsp;&nbsp;&nbsp;&nbsp;\ \<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\ \<br>
+&nbsp;&nbsp;&nbsp;&nbsp;//&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\ \<br>
+&nbsp;&nbsp;&nbsp;//&nbsp;DELTA&nbsp;&nbsp;&nbsp;&nbsp;\ \<br>
+&nbsp;&nbsp;//____________\ \<br>
+&nbsp;/__________<u>CO.</u>____\<br>
+
+</code>
+
+<!--<h1>DeltaCo</h1>-->
 
 <ul>
 <li>CEO: Matthew Haddad</li>
@@ -11,6 +25,31 @@
 <li>Ian Atol</li>
 <li>Vanessa Martinez</li>
 </ul>
+
+<b><u>1/22/18</b></u><br>
+Matthew:
+<li>Worked on preliminary UI
+<li>Next, refine and enhance UI
+<br>Ethan:
+<li>Worked on a repository
+<li>Next, documentation for template
+<br>Micah:
+<li>Did preliminary research on recipe sites
+<li>Next, add more attributes to schema
+<br>Ian:
+<li>Created a sample schema
+<li>Next, turn recipe struct into schema
+<br>
+
+<b><u>1/19/18</b></u><br>
+Matthew:
+<li>Work on preliminary UI
+<br>Ethan:
+<li>Work on a repository
+<br>Micah:
+<li>Preliminary research on recipe sites
+<br>Ian:
+<li>Create a sample schema<br>
 
 </body>
 </html>
