--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 <li>Ian Atol</li>
 <li>Vanessa Martinez</li>
 </ul>
+  
+<b><u>1/22/18</b></u><br>
+Matthew:
+<li>Worked on refining website
+<li>Work on refining website more
+<br>Ethan:
+<li>Added setup instructions for site template
+<li>Next, write instructions for adding modules
+<br>Micah:
+<li>Organized database data structures
+<li>Next, develop CSS and style for GitHub
+<br>Ian:
+<li>N/A
+<li>Next, incorporate recipe struct into schema
+<br>Vanessa:
+<li>N/A
+<li>Familiarize with Python
+<br>
 
 <b><u>1/22/18</b></u><br>
 Matthew:
@@ -39,7 +57,7 @@ Matthew:
 <li>Next, add more attributes to schema
 <br>Ian:
 <li>Created a sample schema
-<li>Next, turn recipe struct into schema
+<li>Next, incorporate recipe struct into schema
 <br>
 
 <b><u>1/19/18</b></u><br>
@@ -50,7 +68,7 @@ Matthew:
 <br>Micah:
 <li>Preliminary research on recipe sites
 <br>Ian:
-<li>Create a sample schema<br>
+<li>Create a sample schema
 
 </body>
 </html>
