--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link href='style.css'>
 <body>
-<background=colorfulfreebg.jpg>
+<background="colorfulfreebg.jpg">
 
 <code>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Λ<br>
