--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <link href='style.css'>
-<body>
-<background="colorfulfreebg.jpg">
+<style>
+  body {
+    background-image: url("colorfulfreebg.jpg");
+  }
+</style>
 
 <code>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Λ<br>
