--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     background-image: url("colorfulfreebg.jpg");
   }
 </style>
+  
+<body>
 
 <code>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Λ<br>
