--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <style>
   body {
     background-image: url("colorfulfreebg.jpg");
+    background-size: cover;
+    font-family: Helvetica;
   }
 </style>
   
