Update appearance of scrumlogs.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     animation-duration: 1s;
   }
 
+  .scrumlog_entry {
+    padding: 8px;
+    margin: 16px;
+    border: 2px solid rgba(0, 128, 0, 0.4);
+    border-radius: 5px;
+    background-color: rgba(0, 255, 0, 0.1);
+  }
+
   @keyframes fadeInTop {
     from {
       position: absolute;
@@ -50,6 +58,7 @@ style="padding:10px 50px;width:150px;height:180px;">
 <!--<h1>DeltaCo</h1>-->
 
 <div class="box">
+<h1><a href="https://github.com/delta-co">Delta Co.</a></h1>
 <ul>
 <li>CEO: Matthew Haddad</li>
 <li>Ethan Dalool</li>
@@ -58,66 +67,153 @@ style="padding:10px 50px;width:150px;height:180px;">
 <li>Vanessa Martinez</li>
 </ul>
 
-<b><u>1/24/18</b></u><br>
-Matthew:
-<li>Worked on refining website more (logo, formatting)
-<li>Add animations to website
-<br>Ethan:
-<li>Wrote instructions for adding components to backend and website
-<li>Write attribute list and suggested schema for profiles
-<br>Micah:
-<li>N/A
-<li>N/A
-<br>Ian:
-<li>Began incorporating recipe struct into schema
-<li>Next, continue incorporating recipe struct into schema
-<br>Vanessa:
-<li>Familiarized with Python and Flask
-<li>Next, familiarize further with Python and Flask
-<br>
-  
-<b><u>1/23/18</b></u><br>
-Matthew:
-<li>Worked on refining website
-<li>Work on refining website more
-<br>Ethan:
-<li>Added setup instructions for site template
-<li>Next, write instructions for adding modules
-<br>Micah:
-<li>Organized database data structures
-<li>Next, develop CSS and style for GitHub
-<br>Ian:
-<li>N/A
-<li>Next, incorporate recipe struct into schema
-<br>Vanessa:
-<li>N/A
-<li>Next, familiarize with Python
-<br>
+<!--
+<div class="scrumlog_entry">
+    <h3>DATE</h3>
+    Matthew:
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    Ethan:
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    Micah:
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    Ian:
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
+-->
 
-<b><u>1/22/18</b></u><br>
-Matthew:
-<li>Worked on preliminary UI
-<li>Next, refine and enhance UI
-<br>Ethan:
-<li>Worked on a repository
-<li>Next, documentation for template
-<br>Micah:
-<li>Did preliminary research on recipe sites
-<li>Next, add more attributes to schema
-<br>Ian:
-<li>Created a sample schema
-<li>Next, incorporate recipe struct into schema
-<br>
 
-<b><u>1/19/18</b></u><br>
-Matthew:
-<li>Work on preliminary UI
-<br>Ethan:
-<li>Work on a repository
-<br>Micah:
-<li>Preliminary research on recipe sites
-<br>Ian:
-<li>Create a sample schema
+<div class="scrumlog_entry">
+    <h3>1/24/18</h3>
+    Matthew:
+    <ul>
+        <li>Worked on refining website more (logo, formatting)</li>
+        <li>Add animations to website</li>
+    </ul>
+    Ethan:
+    <ul>
+        <li>Wrote instructions for adding components to backend and website</li>
+        <li>Write attribute list and suggested schema for profiles</li>
+    </ul>
+    Micah:
+    <ul>
+        <li>N/A</li>
+        <li>N/A</li>
+    </ul>
+    Ian:
+    <ul>
+        <li>Began incorporating recipe struct into schema</li>
+        <li>Next, continue incorporating recipe struct into schema</li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li>Familiarized with Python and Flask</li>
+        <li>Next, familiarize further with Python and Flask</li>
+    </ul>
+</div>
+
+
+
+<div class="scrumlog_entry">
+    <h3>1/23/18</h3>
+    Matthew:
+    <ul>
+        <li>Worked on refining website</li>
+        <li>Work on refining website more</li>
+    </ul>
+    Ethan:
+    <ul>
+        <li>Added setup instructions for site template</li>
+        <li>Next, write instructions for adding modules</li>
+    </ul>
+    Micah:
+    <ul>
+        <li>Organized database data structures</li>
+        <li>Next, develop CSS and style for GitHub</li>
+    </ul>
+    Ian:
+    <ul>
+        <li>N/A</li>
+        <li>Next, incorporate recipe struct into schema</li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li>N/A</li>
+        <li>Next, familiarize with Python</li>
+    </ul>
+</div>
+
+
+
+<div class="scrumlog_entry">
+    <h3>1/22/18</h3>
+    Matthew:
+    <ul>
+        <li>Worked on preliminary UI</li>
+        <li>Next, refine and enhance UI</li>
+    </ul>
+    Ethan:
+    <ul>
+        <li>Worked on a repository</li>
+        <li>Next, documentation for template</li>
+    </ul>
+    Micah:
+    <ul>
+        <li>Did preliminary research on recipe sites</li>
+        <li>Next, add more attributes to schema</li>
+    </ul>
+    Ian:
+    <ul>
+        <li>Created a sample schema</li>
+        <li>Next, incorporate recipe struct into schema</li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li>Out sick</li>
+    </ul>
+</div>
+
+
+
+<div class="scrumlog_entry">
+    <h3>1/19/18</h3>
+    Matthew:
+    <ul>
+        <li>Work on preliminary UI</li>
+    </ul>
+    Ethan:
+    <ul>
+        <li>Work on a repository</li>
+    </ul>
+    Micah:
+    <ul>
+        <li>Preliminary research on recipe sites</li>
+    </ul>
+    Ian:
+    <ul>
+        <li>Create a sample schema</li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li>Out sick</li>
+    </ul>
+</div>
 
 </div>
 </body>
