Match tense with other logs "Next, ".

--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@ style="padding:10px 50px;width:150px;height:180px;">
   
 <body>
 
-<!--<h1>DeltaCo</h1>-->
-
 <div class="box">
 <h1><a href="https://github.com/delta-co">Delta Co.</a></h1>
 <ul>
@@ -67,7 +65,7 @@ style="padding:10px 50px;width:150px;height:180px;">
 <li>Vanessa Martinez</li>
 </ul>
 
-<!--
+<!-- TEMPLATE FOR SCRUMLOGS:
 <div class="scrumlog_entry">
     <h3>DATE</h3>
     Matthew:
@@ -104,12 +102,12 @@ style="padding:10px 50px;width:150px;height:180px;">
     Matthew:
     <ul>
         <li>Worked on refining website more (logo, formatting)</li>
-        <li>Add animations to website</li>
+        <li>Next, add animations to website</li>
     </ul>
     Ethan:
     <ul>
         <li>Wrote instructions for adding components to backend and website</li>
-        <li>Write attribute list and suggested schema for profiles</li>
+        <li>Next, write attribute list and suggested schema for profiles</li>
     </ul>
     Micah:
     <ul>
@@ -135,7 +133,7 @@ style="padding:10px 50px;width:150px;height:180px;">
     Matthew:
     <ul>
         <li>Worked on refining website</li>
-        <li>Work on refining website more</li>
+        <li>Next, keep refining website more</li>
     </ul>
     Ethan:
     <ul>
