--- a/index.html
+++ b/index.html
@@ -95,6 +95,68 @@ style="padding:10px 50px;width:150px;height:180px;">
     </ul>
 </div>
 -->
+  
+  
+  
+<div class="scrumlog_entry">
+    <h3>1/26/18</h3>
+    Matthew:
+    <ul>
+        <li>Refined cooking website user interface</li>
+        <li>Next, refine cooking website user interface further</li>
+    </ul>
+    Ethan:
+    <ul>
+        <li>Improved appearance of Scrumlog page</li>
+        <li>Next, starte designing OO database and queries</li>
+    </ul>
+    Micah:
+    <ul>
+        <li>N/A</li>
+        <li>N/A</li>
+    </ul>
+    Ian:
+    <ul>
+        <li>Worked on schema outline</li>
+        <li>Next, research cooking sites for potential features</li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li>Familiarized with Python and Flask</li>
+        <li>Next, familiarize further with Python and Flask</li>
+    </ul>
+</div>
+
+  
+  
+<div class="scrumlog_entry">
+    <h3>1/25/18</h3>
+    Matthew:
+    <ul>
+        <li>Added slight refinements to company website</li>
+        <li>Next, refine cooking website user interface</li>
+    </ul>
+    Ethan:
+    <ul>
+        <li>Wrote schema for user type</li>
+        <li>Next, improve appearance of Scrumlog page</li>
+    </ul>
+    Micah:
+    <ul>
+        <li>N/A</li>
+        <li>N/A</li>
+    </ul>
+    Ian:
+    <ul>
+        <li>Familiarized with Python and Flask</li>
+        <li>Next, log potential SQL queries</li>
+    </ul>
+    Vanessa:
+    <ul>
+        <li>Familiarized with Python and Flask</li>
+        <li>Next, familiarize further with Python and Flask</li>
+    </ul>
+</div>
 
 
 <div class="scrumlog_entry">
