--- a/index.html
+++ b/index.html
@@ -1,69 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-<style>
-  body {
-    background-image: url("colorfulfreebg.jpg");
-    background-size: cover;
-    font-family: Helvetica;
-    padding: 10px;
-  }
-
-  .box{ 
-    background-color: #FFFFFF;
-    border: 5px solid #CCCCCC;
-    position: absolute;
-    top: 250px;
-    left: 150px;
-    right: 140px;
-    padding: 25px;
-  }
-
-  .logo {
-    resize: both;
-    overflow: auto;
-    animation-name: fadeInTop;
-    animation-delay: 0s;
-    animation-duration: 1s;
-  }
-
-  .scrumlog_entry {
-    padding: 8px;
-    margin: 16px;
-    border: 2px solid rgba(0, 128, 0, 0.4);
-    border-radius: 5px;
-    background-color: rgba(0, 255, 0, 0.1);
-  }
-
-  @keyframes fadeInTop {
-    from {
-      position: absolute;
-      top: -100px;
-      opacity: 0;
-    }
-    to {
-      position: absolute;
-      top: 0px;
-      opacity: 1;
-    }
-</style>
-
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	</head>
 <!--<div class="logo">-->
-<img src="delta.png" alt="Logo missing!"
-style="padding:10px 50px;width:150px;height:180px;">
 <!--</div>-->
-  
-<body>
-
-<div class="box">
-<h1><a href="https://github.com/delta-co">Delta Co.</a></h1>
-<ul>
-<li>CEO: Matthew Haddad</li>
-<li>Ethan Dalool</li>
-<li>Micah Monticello</li>
-<li>Ian Atol</li>
-<li>Vanessa Martinez</li>
-</ul>
+	<body>
+		<img src="delta.png" alt="Logo missing!" style="padding:10px 50px;width:150px;height:180px;">
+		<div class="box">
+			<h1><a href="https://github.com/delta-co">Delta Co.</a></h1>
+			<ul>
+				<li>CEO: Matthew Haddad</li>
+				<li>Ethan Dalool</li>
+				<li>Micah Monticello</li>
+				<li>Ian Atol</li>
+				<li>Vanessa Martinez</li>
+			</ul>
 
 <!-- TEMPLATE FOR SCRUMLOGS:
 <div class="scrumlog_entry">
@@ -98,183 +50,176 @@ style="padding:10px 50px;width:150px;height:180px;">
   
   
   
-<div class="scrumlog_entry">
-    <h3>1/26/18</h3>
-    Matthew:
-    <ul>
-        <li>Refined cooking website user interface</li>
-        <li>Next, refine cooking website user interface further</li>
-    </ul>
-    Ethan:
-    <ul>
-        <li>Improved appearance of Scrumlog page</li>
-        <li>Next, starte designing OO database and queries</li>
-    </ul>
-    Micah:
-    <ul>
-        <li>N/A</li>
-        <li>N/A</li>
-    </ul>
-    Ian:
-    <ul>
-        <li>Worked on schema outline</li>
-        <li>Next, research cooking sites for potential features</li>
-    </ul>
-    Vanessa:
-    <ul>
-        <li>Familiarized with Python and Flask</li>
-        <li>Next, familiarize further with Python and Flask</li>
-    </ul>
-</div>
-
+			<div class="scrumlog_entry">
+				<h3>1/26/18</h3>
+				Matthew:
+				<ul>
+					<li>Refined cooking website user interface</li>
+					<li>Next, refine cooking website user interface further</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Improved appearance of Scrumlog page</li>
+					<li>Next, starte designing OO database and queries</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on schema outline</li>
+					<li>Next, research cooking sites for potential features</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Familiarized with Python and Flask</li>
+					<li>Next, familiarize further with Python and Flask</li>
+				</ul>
+			</div>
   
-  
-<div class="scrumlog_entry">
-    <h3>1/25/18</h3>
-    Matthew:
-    <ul>
-        <li>Added slight refinements to company website</li>
-        <li>Next, refine cooking website user interface</li>
-    </ul>
-    Ethan:
-    <ul>
-        <li>Wrote schema for user type</li>
-        <li>Next, improve appearance of Scrumlog page</li>
-    </ul>
-    Micah:
-    <ul>
-        <li>N/A</li>
-        <li>N/A</li>
-    </ul>
-    Ian:
-    <ul>
-        <li>Familiarized with Python and Flask</li>
-        <li>Next, log potential SQL queries</li>
-    </ul>
-    Vanessa:
-    <ul>
-        <li>Familiarized with Python and Flask</li>
-        <li>Next, familiarize further with Python and Flask</li>
-    </ul>
-</div>
+			<div class="scrumlog_entry">
+				<h3>1/25/18</h3>
+				Matthew:
+				<ul>
+					<li>Added slight refinements to company website</li>
+					<li>Next, refine cooking website user interface</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Wrote schema for user type</li>
+					<li>Next, improve appearance of Scrumlog page</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Familiarized with Python and Flask</li>
+					<li>Next, log potential SQL queries</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Familiarized with Python and Flask</li>
+					<li>Next, familiarize further with Python and Flask</li>
+				</ul>
+			</div>
 
+			<div class="scrumlog_entry">
+				<h3>1/24/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on refining website more (logo, formatting)</li>
+					<li>Next, add animations to website</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Wrote instructions for adding components to backend and website</li>
+					<li>Next, write attribute list and suggested schema for profiles</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Began incorporating recipe struct into schema</li>
+					<li>Next, continue incorporating recipe struct into schema</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Familiarized with Python and Flask</li>
+					<li>Next, familiarize further with Python and Flask</li>
+				</ul>
+			</div>
 
-<div class="scrumlog_entry">
-    <h3>1/24/18</h3>
-    Matthew:
-    <ul>
-        <li>Worked on refining website more (logo, formatting)</li>
-        <li>Next, add animations to website</li>
-    </ul>
-    Ethan:
-    <ul>
-        <li>Wrote instructions for adding components to backend and website</li>
-        <li>Next, write attribute list and suggested schema for profiles</li>
-    </ul>
-    Micah:
-    <ul>
-        <li>N/A</li>
-        <li>N/A</li>
-    </ul>
-    Ian:
-    <ul>
-        <li>Began incorporating recipe struct into schema</li>
-        <li>Next, continue incorporating recipe struct into schema</li>
-    </ul>
-    Vanessa:
-    <ul>
-        <li>Familiarized with Python and Flask</li>
-        <li>Next, familiarize further with Python and Flask</li>
-    </ul>
-</div>
+			<div class="scrumlog_entry">
+				<h3>1/23/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on refining website</li>
+					<li>Next, keep refining website more</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Added setup instructions for site template</li>
+					<li>Next, write instructions for adding modules</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Organized database data structures</li>
+					<li>Next, develop CSS and style for GitHub</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>N/A</li>
+					<li>Next, incorporate recipe struct into schema</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>N/A</li>
+					<li>Next, familiarize with Python</li>
+				</ul>
+			</div>
 
+			<div class="scrumlog_entry">
+				<h3>1/22/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on preliminary UI</li>
+					<li>Next, refine and enhance UI</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Worked on a repository</li>
+					<li>Next, documentation for template</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Did preliminary research on recipe sites</li>
+					<li>Next, add more attributes to schema</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Created a sample schema</li>
+					<li>Next, incorporate recipe struct into schema</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Out sick</li>
+				</ul>
+			</div>
 
-
-<div class="scrumlog_entry">
-    <h3>1/23/18</h3>
-    Matthew:
-    <ul>
-        <li>Worked on refining website</li>
-        <li>Next, keep refining website more</li>
-    </ul>
-    Ethan:
-    <ul>
-        <li>Added setup instructions for site template</li>
-        <li>Next, write instructions for adding modules</li>
-    </ul>
-    Micah:
-    <ul>
-        <li>Organized database data structures</li>
-        <li>Next, develop CSS and style for GitHub</li>
-    </ul>
-    Ian:
-    <ul>
-        <li>N/A</li>
-        <li>Next, incorporate recipe struct into schema</li>
-    </ul>
-    Vanessa:
-    <ul>
-        <li>N/A</li>
-        <li>Next, familiarize with Python</li>
-    </ul>
-</div>
-
-
-
-<div class="scrumlog_entry">
-    <h3>1/22/18</h3>
-    Matthew:
-    <ul>
-        <li>Worked on preliminary UI</li>
-        <li>Next, refine and enhance UI</li>
-    </ul>
-    Ethan:
-    <ul>
-        <li>Worked on a repository</li>
-        <li>Next, documentation for template</li>
-    </ul>
-    Micah:
-    <ul>
-        <li>Did preliminary research on recipe sites</li>
-        <li>Next, add more attributes to schema</li>
-    </ul>
-    Ian:
-    <ul>
-        <li>Created a sample schema</li>
-        <li>Next, incorporate recipe struct into schema</li>
-    </ul>
-    Vanessa:
-    <ul>
-        <li>Out sick</li>
-    </ul>
-</div>
-
-
-
-<div class="scrumlog_entry">
-    <h3>1/19/18</h3>
-    Matthew:
-    <ul>
-        <li>Work on preliminary UI</li>
-    </ul>
-    Ethan:
-    <ul>
-        <li>Work on a repository</li>
-    </ul>
-    Micah:
-    <ul>
-        <li>Preliminary research on recipe sites</li>
-    </ul>
-    Ian:
-    <ul>
-        <li>Create a sample schema</li>
-    </ul>
-    Vanessa:
-    <ul>
-        <li>Out sick</li>
-    </ul>
-</div>
-
-</div>
-</body>
+			<div class="scrumlog_entry">
+				<h3>1/19/18</h3>
+				Matthew:
+				<ul>
+					<li>Work on preliminary UI</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Work on a repository</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Preliminary research on recipe sites</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Create a sample schema</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Out sick</li>
+				</ul>
+			</div>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</body>
 </html>
