--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel=StyleSheet href="style.css" type="text/css" media=screen>
+		<link rel=StyleSheet href="delta-co.github.io/style.css" type="text/css" media=screen>
 	</head>
 <!--<div class="logo">-->
 <!--</div>-->
