--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<img src="delta.png" alt="Logo missing!" style="padding:10px 50px;width:150px;height:180px;">
 		<div class="box">
-			<h1><a href="https://github.com/delta-co">Delta Co.</a></h1>
+			<h1><a style="text-decoration: none;" href="https://github.com/delta-co">Delta Co.</a></h1>
 			<ul>
 				<li>CEO: Matthew Haddad</li>
 				<li>Ethan Dalool</li>
