--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Oxygen|Rubik+Mono+One" rel="stylesheet"> 
 		<link rel="stylesheet" href="delta-co.github.io/style.css" type="text/css">
 	</head>
 <!--<div class="logo">-->
@@ -9,15 +10,25 @@
 	<body>
 		<img src="delta.png" alt="Logo missing!" style="padding:10px 50px;width:150px;height:180px;">
 		<div class="box">
-			<h1><a style="text-decoration: none;" href="https://github.com/delta-co">Delta Co.</a></h1>
-			<ul>
-				<li>CEO: Matthew Haddad</li>
-				<li>Ethan Dalool</li>
-				<li>Micah Monticello</li>
-				<li>Ian Atol</li>
-				<li>Vanessa Martinez</li>
-			</ul>
-
+			<h1 class="title"><a style="text-decoration: none;" href="https://github.com/delta-co">Delta Co.</a></h1>
+			<div class="col-md-12 profile-list">
+				<div class="col-md-4 profile">
+					<p>CEO: Matthew Haddad</p>
+				</div>
+				<div class="col-md-4 profile">
+					<p>Ethan Dalool</p>
+				</div>
+				<div class="col-md-4 profile">
+					<p>Micah Monticello</p>
+				</div>
+				<div class="col-md-4 profile">
+					<p>Ian Atol</p>
+				</div>
+				<div class="col-md-4 profile">
+					<p>Vanessa Martinez</p>
+				</div>
+			</div>
+			
 <!-- TEMPLATE FOR SCRUMLOGS:
 <div class="scrumlog_entry">
     <h3>DATE</h3>
