--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<img src="delta.png" alt="Logo missing!" style="padding:10px 50px;width:150px;height:180px;">
 		<div class="box">
 			<h1 class="title"><a style="text-decoration: none;" href="https://github.com/delta-co">Delta Co.</a></h1>
-			<div class="col-md-12 profile-list">
+			<div class="row profile-list">
 				<div class="col-md-4 profile">
 					<p>CEO: Matthew Haddad</p>
 				</div>
@@ -21,12 +21,15 @@
 				<div class="col-md-4 profile">
 					<p>Micah Monticello</p>
 				</div>
+			</div>
+			<div class="row profile-list">
 				<div class="col-md-4 profile">
 					<p>Ian Atol</p>
 				</div>
 				<div class="col-md-4 profile">
 					<p>Vanessa Martinez</p>
 				</div>
+				<div class="col-md-4"></div>
 			</div>
 			
 <!-- TEMPLATE FOR SCRUMLOGS:
