--- a/index.html
+++ b/index.html
@@ -14,20 +14,26 @@
 			<div class="row profile-list">
 				<div class="col-md-4 profile">
 					<p>CEO: Matthew Haddad</p>
+					<img src="delta-co.github.io/default_profile_pic.png">
 				</div>
 				<div class="col-md-4 profile">
 					<p>Ethan Dalool</p>
+					<img src="delta-co.github.io/default_profile_pic.png">
+
 				</div>
 				<div class="col-md-4 profile">
 					<p>Micah Monticello</p>
+					<img src="delta-co.github.io/default_profile_pic.png">
 				</div>
 			</div>
 			<div class="row profile-list">
 				<div class="col-md-4 profile">
 					<p>Ian Atol</p>
+					<img src="delta-co.github.io/default_profile_pic.png">
 				</div>
 				<div class="col-md-4 profile">
 					<p>Vanessa Martinez</p>
+					<img src="delta-co.github.io/default_profile_pic.png">
 				</div>
 				<div class="col-md-4"></div>
 			</div>
