--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--<div class="logo">-->
 <!--</div>-->
 	<body>
-		<img src="delta.png" alt="Logo missing!" style="padding:10px 50px;width:150px;height:180px;">
+		<img src="delta.png" alt="Logo missing!" style="width:150px;height:180px;">
 		<div class="box">
 			<h1 class="title"><a style="text-decoration: none;" href="https://github.com/delta-co">Delta Co.</a></h1>
 			<div class="row profile-list">
