--- a/index.html
+++ b/index.html
@@ -70,7 +70,34 @@
 </div>
 -->
   
-  
+ 			<div class="scrumlog_entry">
+				<h3>1/29/18</h3>
+				Matthew:
+				<ul>
+					<li>Refined cooking website user interface</li>
+					<li>Next, revise company website</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Formulate query ideas</li>
+					<li>Next, work on repository; create database</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Evaluated, revised schema</li>
+					<li>Next, oostrap website</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Evaluated, revised schema</li>
+					<li>Write potential queries</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+			</div>
   
 			<div class="scrumlog_entry">
 				<h3>1/26/18</h3>
@@ -82,7 +109,7 @@
 				Ethan:
 				<ul>
 					<li>Improved appearance of Scrumlog page</li>
-					<li>Next, starte designing OO database and queries</li>
+					<li>Next, start designing OO database and queries</li>
 				</ul>
 				Micah:
 				<ul>
