--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-4 profile">
 					<p>Ian Atol</p>
-					<img src="delta-co.github.io/default_profile_pic.png">
+					<img src="delta-co.github.io/ian_profile_pic.png">
 				</div>
 				<div class="col-md-4 profile">
 					<p>Vanessa Martinez</p>
