--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row profile-list">
 				<div class="col-md-4 profile">
 					<p>CEO: Matthew Haddad</p>
-					<img src="delta-co.github.io/default_profile_pic.png">
+					<img src="delta-co.github.io/colorfulfreebg.jpg.png">
 				</div>
 				<div class="col-md-4 profile">
 					<p>Ethan Dalool</p>
