Add Ethan's profile pic.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="col-md-4 profile">
 					<p>Ethan Dalool</p>
-					<img src="delta-co.github.io/Ethan_profile_pic.png">
+					<img src="delta-co.github.io/ethan_profile_pic.png">
 
 				</div>
 				<div class="col-md-4 profile">
