--- a/index.html
+++ b/index.html
@@ -69,6 +69,93 @@
     </ul>
 </div>
 -->
+			
+			<div class="scrumlog_entry">
+				<h3>2/1/18</h3>
+				Matthew:
+				<ul>
+					<li>Gathered sample recipes</li>
+					<li>Next, scriptify recipes</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Continued RecipeDB class, prepared pseudocode for interface</li>
+					<li>Next, expand insert functionality</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on frontend</li>
+					<li>Worked on HTML, Flask, fetch recipes</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on recipe class</li>
+					<li>Next, Write more Recipe functions</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Wrote some functions for Recipe class</li>
+					<li>Next, Write more Recipe functions</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>1/31/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on logo</li>
+					<li>Next, gather sample recipes</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Started writing RecipeDB class</li>
+					<li>Next, clean up RecipeDB</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Began writing recipe table</li>
+					<li>Next, work on frontend, learn Flask</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on table creating SQL statements</li>
+					<li>Next, work on Recipe class</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Wrote methods for RecipeDB class</li>
+					<li>Next, write get and set functions</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>1/30/18</h3>
+				Matthew:
+				<ul>
+					<li>Began work on new logo</li>
+					<li>Next, work on logo further</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Created database</li>
+					<li>Next, start writing RecipeDB class</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Bootstrapped website</li>
+					<li>Next, next, begin writing recipe table</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Created potential query doc</li>
+					<li>Next, work on table creating SQL statements</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>N/A</li>
+					<li>Next, begin writing methods for RecipeDB class</li>
+				</ul>
+			</div>
   
  			<div class="scrumlog_entry">
 				<h3>1/29/18</h3>
@@ -85,7 +172,7 @@
 				Micah:
 				<ul>
 					<li>Evaluated, revised schema</li>
-					<li>Next, oostrap website</li>
+					<li>Next, bootstrap website</li>
 				</ul>
 				Ian:
 				<ul>
