--- a/index.html
+++ b/index.html
@@ -71,6 +71,93 @@
 -->
 			
 			<div class="scrumlog_entry">
+				<h3>2/6/18</h3>
+				Matthew:
+				<ul>
+					<li>Wrote pseudocode methods for user accounts</li>
+					<li>Next, begin writing user account class</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Wrote method pseudocode/UI design</li>
+					<li>Next, get basic search functions working</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>N/A</li>
+					<li>N/A</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on methods for images</li>
+					<li>Next, work further on image methods</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Familiarized with JSON</li>
+					<li>Next, familiarize further with JSON and work on API</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>2/5/18</h3>
+				Matthew:
+				<ul>
+					<li>Researched user accounts</li>
+					<li>Next, begin preliminary work on user accounts</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Researched search functionality</li>
+					<li>Next, write method pseudocode/UI design</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Researched UI layout</li>
+					<li>Next, begin preliminary work on UI layout</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Next, research image functionality</li>
+					<li>Next, begin preliminary work on images</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Researched frontend API</li>
+					<li>Next, begin preliminary work on frontend API</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>2/2/18</h3>
+				Matthew:
+				<ul>
+					<li>Scriptified recipes</li>
+					<li>Next, research user accounts</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Expanded insert functionality</li>
+					<li>Next, research search functionality</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Next, work on HTML, Flask, fetch recipes</li>
+					<li>Next, research UI layout</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Wrote more Recipe functions</li>
+					<li>Next, research image functionaltiy</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Wrote more Recipe functions</li>
+					<li>Next, research frontend API</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
 				<h3>2/1/18</h3>
 				Matthew:
 				<ul>
@@ -85,17 +172,17 @@
 				Micah:
 				<ul>
 					<li>Worked on frontend</li>
-					<li>Worked on HTML, Flask, fetch recipes</li>
+					<li>Next, work on HTML, Flask, fetch recipes</li>
 				</ul>
 				Ian:
 				<ul>
 					<li>Worked on recipe class</li>
-					<li>Next, Write more Recipe functions</li>
+					<li>Next, write more Recipe functions</li>
 				</ul>
 				Vanessa:
 				<ul>
 					<li>Wrote some functions for Recipe class</li>
-					<li>Next, Write more Recipe functions</li>
+					<li>Next, write more Recipe functions</li>
 				</ul>
 			</div>
 			
