--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<img src="delta.png" alt="Logo missing!" style="width:150px;height:180px;">
 		<div class="box">
 			<h1 class="title"><a style="text-decoration: none;" href="https://github.com/delta-co">Delta Co.</a></h1>
+			<h5><a href="https://docs.google.com/document/d/1KvPRki5oLd9nQT-RvdOEukoP0isWKxs56FuH_bIfDUo/edit?usp=sharing"> SRS Document </a></h5>
 			<div class="row profile-list">
 				<div class="col-md-4 profile">
 					<p>CEO: Matthew Haddad</p>
