--- a/index.html
+++ b/index.html
@@ -72,6 +72,93 @@
 -->
 			
 			<div class="scrumlog_entry">
+				<h3>2/9/18</h3>
+				Matthew:
+				<ul>
+					<li>Finished user methods</li>
+					<li>Next, work on frontend UI</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Finished search function</li>
+					<li>Next, tweak search function</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Finished profiles</li>
+					<li>Next, work on frontend UI</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Finished image methods</li>
+					<li>Next, work on frontend UI</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on API</li>
+					<li>Next, work on register/login</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>2/8/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on user methods</li>
+					<li>Next, finish user methods</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Worked on search function</li>
+					<li>Next, finish search function</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on profiles</li>
+					<li>Next, finish profiles</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on methods for images</li>
+					<li>Next, finish image methods</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on API</li>
+					<li>Next, work further on API</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>2/7/18</h3>
+				Matthew:
+				<ul>
+					<li>Began implementing user methods</li>
+					<li>Next, work further on user methods</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Began on search function</li>
+					<li>Next, work further on search function</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on profiles</li>
+					<li>Next, work further on profiles</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on methods for images</li>
+					<li>Next, work further on image methods</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on API</li>
+					<li>Next, work further on API</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
 				<h3>2/6/18</h3>
 				Matthew:
 				<ul>
