--- a/index.html
+++ b/index.html
@@ -72,6 +72,64 @@
 -->
 			
 			<div class="scrumlog_entry">
+				<h3>2/13/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on UI element templates</li>
+					<li>Next, incorporate recipe changes into GitHub templates</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Tweaked search function further</li>
+					<li>Next, continue improving frontend application</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Worked on frontend UI</li>
+					<li>Next, work on frontend UI further</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Worked on profile page</li>
+					<li>Next, work on profile page further</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on frontend register/login</li>
+					<li>Next, work on register/login further</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
+				<h3>2/12/18</h3>
+				Matthew:
+				<ul>
+					<li>Worked on UI element templates</li>
+					<li>Next, work on UI element templates further</li>
+				</ul>
+				Ethan:
+				<ul>
+					<li>Fixed search function (multiple ingredients, spaces)</li>
+					<li>Next, continue improving frontend application</li>
+				</ul>
+				Micah:
+				<ul>
+					<li>Made graphical, modular changes to frontend</li>
+					<li>Next, work on frontend UI further</li>
+				</ul>
+				Ian:
+				<ul>
+					<li>Drafted profile pages</li>
+					<li>Next, work on profile/recipe page</li>
+				</ul>
+				Vanessa:
+				<ul>
+					<li>Worked on frontend register/login</li>
+					<li>Next, work on register/login further</li>
+				</ul>
+			</div>
+			
+			<div class="scrumlog_entry">
 				<h3>2/9/18</h3>
 				Matthew:
 				<ul>
